--- a/package.json
+++ b/package.json
@@ -6,6 +6,16 @@
   "bugs": {
     "url": "https://github.com/mohayonao/web-audio-engine/issues"
   },
+  "dependencies": {},
+  "devDependencies": {
+    "ava": "^0.13.0",
+    "babel-cli": "^6.6.5",
+    "babel-eslint": "^6.0.0",
+    "babel-preset-es2015": "^6.6.0",
+    "eslint": "^2.5.3",
+    "nyc": "^6.1.1",
+    "sinon": "^1.17.3"
+  },
   "files": [
     "package.json",
     "README.md",
@@ -21,5 +31,21 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/mohayonao/web-audio-engine.git"
+  },
+  "ava": {
+    "require": [
+      "babel-core/register"
+    ]
+  },
+  "scripts": {
+    "build": "npm run build:to5",
+    "build:to5": "BABEL_ENV=production babel src --out-dir lib",
+    "cover": "nyc --reporter=text --reporter=html npm run test",
+    "lint": "eslint src test",
+    "prepublish": "rm -rf lib && npm run lint && npm run test && npm run build:to5",
+    "test": "ava",
+    "travis": "npm run lint && npm run test",
+    "watch": "npm run watch:test",
+    "watch:test": "ava --watch"
   }
 }
