--- a/.eslintrc
+++ b/.eslintrc
@@ -1,8 +1,11 @@
 {
-  "parser": "babel-eslint",
+  "plugins": [ "node" ],
   "env": {
     "es6": true,
     "node": true
+  },
+  "rules": {
+    "node/no-unsupported-features": [ 2, { "version": 4 } ]
   },
   "extends": "eslint:recommended"
 }
