--- a/package.json
+++ b/package.json
@@ -8,12 +8,19 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "ava": "^0.13.0",
     "babel-cli": "^6.6.5",
-    "babel-eslint": "^6.0.0",
-    "babel-preset-es2015": "^6.6.0",
-    "eslint": "^2.5.3",
+    "babel-plugin-espower": "^2.1.2",
+    "babel-plugin-transform-es2015-classes": "^6.6.5",
+    "babel-plugin-unassert": "^2.0.1",
+    "babel-register": "^6.7.2",
+    "deep-equal": "^1.0.1",
+    "eslint": "^2.6.0",
+    "eslint-plugin-node": "^1.0.0",
+    "eslint-watch": "^2.1.10",
+    "mocha": "^2.4.5",
+    "npm-run-all": "^1.7.0",
     "nyc": "^6.1.1",
+    "power-assert": "^1.3.1",
     "sinon": "^1.17.3"
   },
   "files": [
@@ -32,20 +39,21 @@
     "type": "git",
     "url": "https://github.com/mohayonao/web-audio-engine.git"
   },
-  "ava": {
-    "require": [
-      "babel-core/register"
-    ]
-  },
   "scripts": {
-    "build": "npm run build:to5",
-    "build:to5": "BABEL_ENV=production babel src --out-dir lib",
-    "cover": "nyc --reporter=text --reporter=html npm run test",
+    "build": "npm-run-all build:*",
+    "build:to5": "BABEL_ENV=production babel --out-dir=lib src",
+    "clean": "rm -rf coverage .nyc_output npm-debug.log",
+    "cover": "BABEL_ENV=coverage nyc --reporter text --reporter html mocha --require babel-register",
     "lint": "eslint src test",
-    "prepublish": "rm -rf lib && npm run lint && npm run test && npm run build:to5",
-    "test": "ava",
-    "travis": "npm run lint && npm run test",
-    "watch": "npm run watch:test",
-    "watch:test": "ava --watch"
+    "mocha": "mocha",
+    "postversion": "git push && git push --tags && npm run clean",
+    "prepublish": "npm-run-all clean lint test",
+    "preversion": "npm-run-all clean lint test",
+    "test": "mocha --require babel-register",
+    "travis": "npm-run-all lint mocha",
+    "version": "npm run build",
+    "watch": "npm-run-all -p watch:*",
+    "watch:lint": "esw --watch src test",
+    "watch:test": "mocha --require babel-register --watch"
   }
 }
