--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "power-assert": "^1.3.1",
     "sinon": "^1.17.3"
   },
+  "engines": {
+    "node": ">= 4.0.0"
+  },
   "files": [
     "package.json",
     "README.md",
