--- a/.babelrc
+++ b/.babelrc
@@ -9,6 +9,7 @@
     "development": {
       "only": [ "src", "test" ],
       "plugins": [
+        [ "babel-plugin-empower-assert" ],
         [ "babel-plugin-espower" ]
       ]
     },
