--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.6.5",
+    "babel-plugin-empower-assert": "^1.2.0",
     "babel-plugin-espower": "^2.1.2",
     "babel-plugin-transform-es2015-classes": "^6.6.5",
     "babel-plugin-unassert": "^2.0.1",
