update dev tools

--- a/.babelrc
+++ b/.babelrc
@@ -8,9 +8,8 @@
     },
     "development": {
       "only": [ "src", "test" ],
-      "plugins": [
-        [ "babel-plugin-empower-assert" ],
-        [ "babel-plugin-espower" ]
+      "presets": [
+        "babel-preset-power-assert"
       ]
     },
     "coverage": {
