update build task

--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "package.json",
     "README.md",
     "index.js",
+    "build",
     "lib"
   ],
   "homepage": "https://github.com/mohayonao/web-audio-engine/",
@@ -50,14 +51,14 @@
   },
   "scripts": {
     "build": "npm-run-all build:*",
-    "build:browser": "BABEL_ENV=production browserify index.js -s WebAudioEngine -o build/web-audio-engine.js -t [ babelify --presets [ es2015 ] ]",
-    "build:to5": "BABEL_ENV=production babel --out-dir=lib src",
-    "clean": "rm -rf coverage .nyc_output npm-debug.log",
+    "build:browser": "mkdir -p build && BABEL_ENV=production browserify src -s WebAudioEngine -o build/web-audio-engine.js -t [ babelify --presets [ es2015 ] ]",
+    "build:to5": "mkdir -p lib && BABEL_ENV=production babel --out-dir=lib src",
+    "clean": "rm -rf lib coverage .nyc_output npm-debug.log",
     "cover": "BABEL_ENV=coverage nyc --reporter text --reporter html mocha --require babel-register",
     "lint": "eslint src test",
     "mocha": "mocha",
     "postversion": "git push && git push --tags && npm run clean",
-    "prepublish": "npm-run-all clean lint test",
+    "prepublish": "npm-run-all clean lint test build",
     "preversion": "npm-run-all clean lint test",
     "test": "mocha --require babel-register",
     "travis": "npm-run-all lint mocha",
