--- a/demo/package.json
+++ b/demo/package.json
@@ -62,7 +62,8 @@
   },
   "dependencies": {
     "optionator": "^0.8.1",
-    "tickable-timer": "^1.0.0"
+    "tickable-timer": "^1.0.0",
+    "web-audio-scheduler": "^1.0.1"
   },
   "license": "MIT",
   "main": "demo.js",
