Implementing AnalyserNode. Fixes #31

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "url": "https://github.com/mohayonao/web-audio-engine/issues"
   },
   "dependencies": {
+    "fourier-transform": "^1.0.2",
+    "scijs-window-functions": "^2.0.2",
     "wav-decoder": "^1.1.0",
     "wav-encoder": "^1.1.0"
   },
