--- a/package.json
+++ b/package.json
@@ -21,12 +21,12 @@
     "babelify": "^7.3.0",
     "browserify": "^13.1.0",
     "deep-equal": "^1.0.1",
-    "eslint": "^3.2.2",
-    "eslint-watch": "^2.1.14",
+    "eslint": "^3.3.1",
     "mocha": "^3.0.2",
-    "npm-run-all": "^2.3.0",
+    "npm-run-all": "^3.0.0",
     "nyc": "^7.1.0",
     "power-assert": "^1.4.1",
+    "run-with-mocha": "^0.2.0",
     "sinon": "^1.17.5"
   },
   "engines": {
@@ -60,18 +60,14 @@
     "build:browser": "BABEL_ENV=production browserify src -s WebAudioEngine -o build/web-audio-engine.js -t [ babelify ]",
     "build:to5": "BABEL_ENV=production babel --out-dir=lib src",
     "clean": "rm -rf lib coverage .nyc_output npm-debug.log",
-    "cover": "BABEL_ENV=coverage nyc --reporter text --reporter html mocha --require babel-register",
+    "cover": "BABEL_ENV=coverage nyc --reporter text --reporter html npm test",
     "gh-pages": "git checkout gh-pages && git merge master && git push origin gh-pages && git checkout master",
     "lint": "eslint src test",
-    "mocha": "mocha",
     "postversion": "git push && git push --tags && npm run clean",
     "prepublish": "npm-run-all clean lint test build",
     "preversion": "npm-run-all clean lint test",
-    "test": "mocha --require babel-register",
-    "travis": "npm-run-all lint mocha",
-    "version": "npm run build && git add -A build",
-    "watch": "npm-run-all -p watch:*",
-    "watch:lint": "esw --watch src test",
-    "watch:test": "mocha --require babel-register --watch"
+    "test": "mocha",
+    "travis": "npm-run-all lint test",
+    "version": "npm run build && git add -A build"
   }
 }
