use setImmediate module

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "fourier-transform": "^1.0.2",
     "nmap": "^1.1.0",
     "scijs-window-functions": "^2.0.2",
+    "setimmediate": "^1.0.5",
     "wav-decoder": "^1.1.0",
     "wav-encoder": "^1.1.0"
   },
